# package-comparison-tool

./: .gitignore  LICENSE  Makefile  README.md  api.py  cli.py  pyproject.toml  test_api.py  tests.py
.github/workflows/: ci.yml  coverage-badge.yml
examples/: print_branch_packages.py
package_comparison_tool/: __init__.py  api.py  cli.py  compare.py  exceptions.py  formatting.py  models.py  version.py
tests/: test_api.py  test_cli.py  test_compare.py  test_formatting.py  test_version.py
