[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package-comparison-tool"
version = "1.0.0"
description = "Compare ALT Linux binary packages between branches with JSON/Markdown reports."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["click>=8.1", "requests>=2.31"]

[project.urls]
Repository = "https://github.com/Raphailinc/package-comparison-tool"

[project.scripts]
package-comparison = "package_comparison_tool.cli:main"
altpkg-diff = "package_comparison_tool.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3.0", "responses>=0.25.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
